Fix doc navbar separator not working on Firefox
The line that separates the documentation header from the main content
was drawn next to the title instead of below the navbar.

Replace the hr element used for the line with setting a border for the
nav element.

--- a/css/cayman.css
+++ b/css/cayman.css
@@ -179,6 +179,8 @@ a:hover {
   min-height: 3.5rem;
   position: relative;
   padding: 2rem .5rem 0;
+  border-bottom: 3px solid #606c71;
+  overflow: auto;
 }
 #doc-navbar-wrapper h1 {
   margin: 0;
@@ -218,19 +220,6 @@ a:hover {
   #doc-navbar-wrapper ul li {
     display: none;
   }
-}
-@media screen and (max-width: 42em) {
-  #doc-navbar-wrapper .float-left {
-    float: none;
-  }
-  #doc-navbar-wrapper .float-right {
-    float: none;
-  }
-}
-hr {
-  width:100%;
-  height:1px;
-  background: #000000;
 }
 
 .project-header {
